--- a/opengl/playground/Cargo.toml
+++ b/opengl/playground/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
     sdl2 =  { version = "0.35", features = ["bundled", "static-link"] }
+    gl = { version = "0.6.0"}
